# credibility

./: README.md  pyproject.toml  run_databricks_pytest.py  run_tests.py
notebooks/: credibility_demo.py
src/credibility/: __init__.py  _validation.py  buhlmann_straub.py  hierarchical.py
tests/: conftest.py  test_buhlmann_straub.py  test_hierarchical.py
