[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credibility"
version = "0.2.0"
description = "Bühlmann-Straub credibility models for non-life insurance pricing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "actuarial",
    "credibility",
    "buhlmann-straub",
    "insurance",
    "pricing",
    "empirical-bayes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "polars>=0.20",
]

[project.optional-dependencies]
pandas = [
    # Optional bridge: accept pd.DataFrame input without breaking existing users.
    # Not required for the core library — install only if you pass pandas DataFrames.
    "pandas>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pandas>=1.3",  # tests include a pandas-bridge test
]

[project.urls]
Repository = "https://github.com/burningcost/credibility"
Issues = "https://github.com/burningcost/credibility/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/credibility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/credibility"]
